--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,9 +7,9 @@
     <script src="index.js"></script>
 </head>
 <body>
-    atlas test !!
+    <h1>NMap Atlas Prototype</h1>
     <br>
-    <button onclick="scan()">Scan !!</button>
+    <button onclick="scan()">Scan</button>
     <br>
     <div id="output"></div>
 </body>
